# project-euler-rust

./: Cargo.toml
lib/: primes.rs
src/: s001.rs  s003.rs  s004.rs  s006.rs  s007.rs  s009.rs  s010.rs
